--- a/src/components/layout/AdminLayout/AdminLayout.module.css
+++ b/src/components/layout/AdminLayout/AdminLayout.module.css
@@ -16,13 +16,13 @@
 .content {
   margin-top: var(--content-spacing);
   margin-bottom: var(--spacing-xl);
-  padding: 0 var(--spacing-md);
+  padding: 0 var(--spacing-sm) 0 0;
 }
 
 /* Tablet+ (600px+): Better spacing */
 @media (min-width: 600px) {
   .content {
-    padding: 0 var(--spacing-lg);
+    padding: 0 var(--spacing-md) 0 0;
   }
 }
 
@@ -33,8 +33,7 @@
   }
 
   .main {
-    width: calc(100% - var(--drawer-width));
-    margin-left: var(--drawer-width);
+    width: 100%;
   }
 
   .content {
